--- a/style.css
+++ b/style.css
@@ -2,8 +2,21 @@ h1{
     margin-top: 20;
     padding-top: 10px;
     padding-bottom: 10px;
+    background-color: rgb(12, 143, 196);
 }
 
 .title-style {
-    color:blueviolet;
+    color:white;
 }
+
+.p-style {
+    padding-left: 20px;
+
+}
+.relative {
+    position: relative;
+    left: 30px;
+    border: 3px solid rgba(255, 255, 255, 0);
+}
+
+h4 {text-align:center;}
