--- a/style.css
+++ b/style.css
@@ -2,11 +2,11 @@ h1{
     margin-top: 20;
     padding-top: 10px;
     padding-bottom: 10px;
-    background-color: rgb(12, 143, 196);
+    background-color: white;
 }
 
 .title-style {
-    color:white;
+    color: black;
 }
 
 .p-style {
@@ -19,4 +19,16 @@ h1{
     border: 3px solid rgba(255, 255, 255, 0);
 }
 
-h4 {text-align:center;}
+h4 {text-align: center;
+    margin-top: 20;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.nav {background-color: cornflowerblue;
+padding-left: 4%;
+padding-right: 4%;
+}
+
+
+
