--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 h1{
-    margin-top: 20;
-    padding-top: 10px;
-    padding-bottom: 10px;
+    padding-bottom: 20px;
     background-color: white;
 }
 
@@ -13,7 +11,7 @@ h1{
     padding-left: 20px;
 
 }
-.relative {
+.testrelative {
     position: relative;
     left: 30px;
     border: 3px solid rgba(255, 255, 255, 0);
@@ -30,6 +28,21 @@ padding-left: 4%;
 padding-right: 4%;
 }
 
+.box-set {
+    position: static;
+    height: 400px;
+    background: darkgray;
+    padding-top: 0%;
+    margin-top: 10%;
+  }
+
+
+  testh1{
+    margin-top: 0;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    background-color: white;
+}
 
 
 
